# darkmap.phasi.space

./: .bazelignore  .bazelrc  .bazelrc.flywheel  .dockerignore  .env.example  .envrc  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Containerfile  Justfile  MODULE.bazel  README.md  SECURITY.md  eslint.config.ts  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  server.mjs  svelte.config.js  tinyland.repo.json  vitest.bazel.config.ts  vitest.config.ts
.github/: lanes.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  provider-request.md
.github/workflows/: browser-rbe-proof.yml  ci.yml  container.yml  deploy-pages.yml  gitops-drift.yml  lane-env.yml  public-smoke.yml  pulse-ingest.yml  staging-deploy.yml  tofu-apply.yml  tofu-plan.yml
data/hitran/: README.md  (+1 more)
docs/: .lane-env-gate-test.md  CI-SCHEMA.md  EPHEMERIS_TILE_CACHE.md  HA_OPENTOFU_STATE_DISPOSABLE_TOFU_PROOF.md  HA_OPENTOFU_STATE_ENDPOINT.md  HA_OPENTOFU_STATE_MIGRATION.md  HA_OPENTOFU_STATE_SCRATCH_PROOF.md  PUBLIC_LAUNCH.md  PUBLIC_READINESS_AUDIT.md  SMOKE.md  TOFU_STATE_GUARDRAILS.md  sprint-ui-polish.md
e2e/: aq-dashboard.spec.ts  aq-inview-webkit.spec.ts  atmospheric-clouds.spec.ts  atmospheric-render.spec.ts  basemap-switching.spec.ts  dock-webkit.spec.ts  follow-mode.spec.ts  layer-rail.spec.ts  lens-switch.spec.ts  mobile-layer-toggle.spec.ts  overflow.spec.ts  popover-portal.spec.ts  route-import.spec.ts  tour.spec.ts  transmission-aerosol.spec.ts  transmission-bands.spec.ts  transmission-helpers.ts  transmission-look-angle.spec.ts  transmission-readout-coexist.spec.ts  transmission-readout-depile.spec.ts  transmission-widget.spec.ts  transmission-zoom-into-band.spec.ts  twilight-compact-webkit.spec.ts
scripts/: bake-spectral-lbl.ts  bake-spectral-lut-smarts-analog.ts  bake-spectral-lut.ts  bazel-cache-backed.sh  cache-attachment-contract.sh  capture-breakpoints.mjs  capture-shipped-ui.mjs  check-conformance.sh  ci-normalize-kubeconfig.sh  ci-tofu-apply-retry.sh  ci-tofu-guardrails.sh  ci-tofu-init-retry.sh  ci-tofu-route-preflight.mjs  ci-tofu-state-check.sh  ha-state-endpoint-package-check.mjs  ha-state-live-candidate-status.mjs  ha-state-migration-plan.mjs  ha-state-proof-evidence-check.mjs  ha-state-scratch-proof.mjs  run-vitest-bazel.mjs  setup-flywheel.sh
src/: app.css  app.html  service-worker.ts
src/lib/atmospheric/: BUILD.bazel  aq-crossval.test.ts  aq-crossval.ts  aqi-field.test.ts  aqi-field.ts  aqi-palette.test.ts  aqi.test.ts  aqi.ts  aqiPalette.svelte.ts  model-cards.test.ts  model-cards.ts  openaq-history-shape.test.ts  openaq-history-shape.ts  openaq-shape.test.ts  openaq-shape.ts  ozone-climatology.test.ts  ozone-climatology.ts  path-constituents.test.ts  path-constituents.ts  pm25-diffusion.test.ts  pm25-diffusion.ts  pollen-extinction.test.ts  pollen-extinction.ts  pollutants.ts  stats.test.ts  stats.ts  tx-constituents.test.ts  tx-constituents.ts  viewport-summary.test.ts  viewport-summary.ts
src/lib/cache/: BUILD.bazel  badge.test.ts  badge.ts  inspector.test.ts  inspector.ts
src/lib/device/: BUILD.bazel  GeolocationService.test.ts  GeolocationService.ts  OrientationService.test.ts  OrientationService.ts  tsconfig.bazel.json
src/lib/effect/services/: AirQualityService.test.ts  AirQualityService.ts  AtmosphericPointService.test.ts  AtmosphericPointService.ts  AtmosphericTileService.test.ts  AtmosphericTileService.ts  BUILD.bazel  CachePolicy.test.ts  CachePolicy.ts  LineByLineService.test.ts  LineByLineService.ts  MieScatteringService.test.ts  MieScatteringService.ts  OfflineCacheRoutes.test.ts  OfflineCacheRoutes.ts  OfflineCacheService.test.ts  OfflineCacheService.ts  OfflineCacheServiceBrowser.test.ts  OfflineCacheServiceBrowser.ts  OpenAQHistoryService.test.ts  OpenAQHistoryService.ts  OpenAQService.test.ts  OpenAQService.ts  RouteImportService.test.ts  RouteImportService.ts  TransmissionEstimator.test.ts  TransmissionEstimator.ts
src/lib/ephemeris/: BUILD.bazel  EphemerisClient.test.ts  EphemerisClient.ts  HorizonProvider.test.ts  HorizonProvider.ts  TerrariumElevationLookup.ts  airmass.test.ts  airmass.ts  horizonAtAzimuth.test.ts  horizonAtAzimuth.ts  horizonAwareEvents.test.ts  horizonAwareEvents.ts  pinEphemeris.test.ts  pinEphemeris.ts  terrarium.ts  time-helix.test.ts  time-helix.ts  twilight-phases.test.ts  twilight-phases.ts  viewportSummary.test.ts  viewportSummary.ts  viewportSummaryCache.test.ts  viewportSummaryCache.ts
src/lib/geocoder/: BUILD.bazel  coordParser.test.ts  coordParser.ts
src/lib/layers/: BUILD.bazel  HealthRegistry.svelte.ts  health-state.test.ts  health-state.ts  source-id-parsing.test.ts  source-id.ts  toast-bridge.test.ts  toast-bridge.ts
src/lib/map/: BUILD.bazel  BasemapController.test.ts  BasemapController.ts  MapLayerController.cancellation.test.ts  MapLayerController.test.ts  MapLayerController.ts  atmosphericTileProtocol.test.ts  atmosphericTileProtocol.ts  beam-footprint.test.ts  beam-footprint.ts  orbit-footprint.test.ts  orbit-footprint.ts  pm25-style.test.ts  pm25-style.ts  point-marker.test.ts  point-marker.ts
src/lib/projection/: BUILD.bazel  static-snapshot.test.ts  static-snapshot.ts
src/lib/routes/: BUILD.bazel  RouteImportService.test.ts  RouteImportService.ts
src/lib/server/geocoder/: BUILD.bazel  GeocoderClient.test.ts  GeocoderClient.ts  cache.test.ts  cache.ts
src/lib/server/raster/: AdStripper.ts  BUILD.bazel  Cache.ts  PointQuery.ts  RasterClient.ts  TileMath.ts  raster-clients.test.ts  raster.test.ts
src/lib/spectral/: BUILD.bazel  aerosol-types.test.ts  aerosol-types.ts  analytical.test.ts  analytical.ts  band-guidance.test.ts  band-guidance.ts  hitran-bands.test.ts  hitran-bands.ts  mie.test.ts  mie.ts  smarts-analog.test.ts  smarts-analog.ts  transmission-axes.ts  voigt.test.ts  voigt.ts
src/lib/sw/: BUILD.bazel  runtime-cache.test.ts  runtime-cache.ts
src/lib/transmission/: BUILD.bazel  look-angle.test.ts  look-angle.ts  slant-geometry.test.ts  slant-geometry.ts
static/: CNAME  manifest.webmanifest  robots.txt  spectral-lut.json
(+126 files in other folders)
