"""
Root BUILD.bazel for darkmap.phasi.space.

Minimal: just create the @npm//... node_modules tree. The SvelteKit
static site is built by `pnpm run build` (vite build) — Bazel does not
produce build/.
"""

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "vitest_config",
    srcs = ["vitest.config.ts"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "vitest_bazel_config",
    srcs = ["vitest.bazel.config.ts"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "tsconfig.json",
        "vitest.bazel.config.ts",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)

# Cross-slice `$lib/...` sources pulled into flywheel-enrolled unit-test
# slices (atmospheric/cache/sw). These files live in the root Bazel package
# (no nearer BUILD.bazel). aspect_rules_js requires cross-package inputs to be
# copied to the bin tree via a js_library (raw file labels are rejected), so
# each is wrapped here and consumed from the slice filegroups.
js_library(
    name = "lib_layers",
    srcs = ["src/lib/layers.ts"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "lib_cache_policy",
    srcs = ["src/lib/effect/services/CachePolicy.ts"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "lib_offline_cache_service",
    srcs = ["src/lib/effect/services/OfflineCacheService.ts"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "lib_offline_cache_routes",
    srcs = ["src/lib/effect/services/OfflineCacheRoutes.ts"],
    visibility = ["//visibility:public"],
)
