"""Bazel targets for the darkmap atmospheric unit-test slice."""

load("@npm//:vitest/package_json.bzl", vitest = "bin")

filegroup(
    name = "atmospheric_srcs",
    srcs = glob(["*.ts"]) + [
        "//:lib_layers",
        "//src/lib/spectral:transmission_axes",
    ],
)

vitest.vitest_test(
    name = "atmospheric_test",
    data = [
        ":atmospheric_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/atmospheric/model-cards.test.ts",
        "src/lib/atmospheric/pm25-diffusion.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
