"""Bazel targets for the darkmap atmospheric unit-test slice."""

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:vitest/package_json.bzl", vitest = "bin")

# Task B (deferred #292 typecheck) intentionally SKIPPED for this slice. A
# ts_project here is invasive: pm25-diffusion.ts imports `$lib/spectral/...` and
# the test files import `$lib/layers` as VALUES, so tsc must resolve cross-
# package modules. A prototype confirmed two blocking cascades: (1) ts_project
# pins --rootDir to this directory, so staged cross-package sources (e.g.
# spectral/transmission-axes.ts) trip TS6059 "not under rootDir"; relaxing
# rootDir to src/lib reshapes emit layout repo-wide; (2) the typecheck also
# compiles the *.test.ts files, whose `$lib/layers` closure surfaces TS2307 /
# implicit-any errors. The vitest_test below already earns RBE coverage, so per
# "don't break anything for a typecheck nicety" the typecheck is left deferred.

js_library(
    name = "atmospheric_app_srcs",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "atmospheric_srcs",
    srcs = glob(["*.ts"]) + [
        "//:lib_layers",
        "//src/lib/spectral:transmission_axes",
    ],
)

vitest.vitest_test(
    name = "atmospheric_test",
    data = [
        ":atmospheric_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/atmospheric/aq-crossval.test.ts",
        "src/lib/atmospheric/aqi.test.ts",
        "src/lib/atmospheric/aqi-field.test.ts",
        "src/lib/atmospheric/model-cards.test.ts",
        "src/lib/atmospheric/openaq-history-shape.test.ts",
        "src/lib/atmospheric/openaq-shape.test.ts",
        "src/lib/atmospheric/ozone-climatology.test.ts",
        "src/lib/atmospheric/pm25-diffusion.test.ts",
        "src/lib/atmospheric/path-constituents.test.ts",
        "src/lib/atmospheric/pollen-extinction.test.ts",
        "src/lib/atmospheric/stats.test.ts",
        "src/lib/atmospheric/tx-constituents.test.ts",
        "src/lib/atmospheric/viewport-summary.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
