"""Bazel targets for the darkmap cache-state unit-test slice."""

load("@npm//:vitest/package_json.bzl", vitest = "bin")

filegroup(
    name = "cache_srcs",
    srcs = glob(["*.ts"]) + [
        "//src/lib/effect/services:cache_policy",
        "//src/lib/effect/services:offline_cache_service",
    ],
)

vitest.vitest_test(
    name = "cache_test",
    data = [
        ":cache_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/cache/badge.test.ts",
        "src/lib/cache/inspector.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
