"""Bazel targets for the darkmap ephemeris service unit-test slice."""

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:vitest/package_json.bzl", vitest = "bin")

filegroup(
    name = "ephemeris_srcs",
    srcs = glob(["*.ts"]),
)

ts_project(
    name = "ephemeris_typecheck",
    srcs = [":ephemeris_srcs"],
    declaration = False,
    no_emit = True,
    tsconfig = "tsconfig.bazel.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        "//:node_modules",
        "//:node_modules/@types/node",
        "//:node_modules/astronomy-engine",
        "//:node_modules/effect",
        "//:node_modules/vitest",
    ],
    visibility = ["//visibility:public"],
)

vitest.vitest_test(
    name = "ephemeris_test",
    data = [
        ":ephemeris_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/ephemeris/EphemerisClient.test.ts",
        "src/lib/ephemeris/viewportSummaryCache.test.ts",
        "src/lib/ephemeris/viewportSummary.test.ts",
    ],
    log_level = "info",
    tags = [
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
