"""Bazel targets for the darkmap ephemeris service unit-test slice."""

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:vitest/package_json.bzl", vitest = "bin")

filegroup(
    name = "ephemeris_srcs",
    srcs = glob(["*.ts"]),
)

# Implementation sources (no *.test.ts) exposed as a js_library so the root
# //:app_build (SvelteKit SSR build) can consume them across the package
# boundary. See the raster package BUILD for the copy_to_bin rationale.
js_library(
    name = "ephemeris_app_srcs",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    visibility = ["//visibility:public"],
)

ts_project(
    name = "ephemeris_typecheck",
    srcs = [":ephemeris_srcs"],
    declaration = False,
    no_emit = True,
    tsconfig = "tsconfig.bazel.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        "//:node_modules",
        "//:node_modules/@types/node",
        "//:node_modules/astronomy-engine",
        "//:node_modules/effect",
        "//:node_modules/vitest",
    ],
    visibility = ["//visibility:public"],
)

vitest.vitest_test(
    name = "ephemeris_test",
    data = [
        ":ephemeris_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/ephemeris/EphemerisClient.test.ts",
        "src/lib/ephemeris/viewportSummaryCache.test.ts",
        "src/lib/ephemeris/viewportSummary.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
